[package]
name = "regent-sdk"
version = "0.2.0"
edition = "2024"
authors = ["Romain SUZANNE <romzorus591@gmail.com>"]
repository = "https://github.com/regent-project/regent-sdk"
license = "Apache-2.0"
description = "Multi-paradigm configuration management system as a library"
keywords = ["automation", "configuration", "management", "infrastructure", "observability"]
categories = ["config", "command-line-utilities"]

[dependencies]
serde = {version = "1.0.228", features= ["derive"]}
serde_yaml = "0.9.34"
serde_json = "1.0.149"
sha2 = "0.10.9"
ssh2 = "0.9.5"
tera = "1.20.1"
pem = { version = "3.0.6", features = ["serde"] }
chrono = "0.4.43"
rayon = "1.11.0"
nanoid = "0.4.0"

[profile.release]
lto = true

[lib]
doctest = false
