[package]
name        = "regent-sdk"
version     = "0.3.0"
edition     = "2024"
authors     = ["Romain SUZANNE <romzorus591@gmail.com>"]
repository  = "https://github.com/regent-project/regent-sdk"
license     = "Apache-2.0"
description = "Multi-paradigm configuration management system as a library"
keywords    = ["automation", "configuration", "management", "infrastructure", "observability"]
categories  = ["config", "command-line-utilities"]

[dependencies]
serde                   = {version = "1.0.228", features= ["derive"]}
yaml_serde              = "0.10"
serde_json              = "1.0.149"
ssh2                    = "0.9.5"
chrono                  = "0.4.44"
rayon                   = "1.12.0"
nanoid                  = "0.4.0"
tera                    = "1.20.1"
tracing                 = "0.1.44"
tokio                   = { version = "1.52.1", features = ["rt-multi-thread"] }
aws-sdk-secretsmanager  = { version = "1.99.0", optional = true }
aws-config              = { version = "1.8.13", features = ["behavior-version-latest"], optional = true }

[profile.release]
lto = true

[lib]
doctest = false

[dev-dependencies]
tracing-subscriber = "0.3.23"
axum        = "0.8.9"
chrono      = "0.4.44"

[features]
aws-secretsmanager= ["dep:aws-config", "dep:aws-sdk-secretsmanager"]
